made the "abilities" styles

--- a/src/style.css
+++ b/src/style.css
@@ -124,69 +124,62 @@ h1 {
     text-align: center;
     margin-bottom: 30px;
     color: white;
+    align-items: center;
 }
 
-#abilities > div {
-    display: inline-block;
-    justify-content: center;
-    background-color: white;
-    width: 500px;
-    text-align: center;
+#python {
+    display: flex;
+    background-color: var(--color5);
+    width: 800px;
+    margin: auto;
     border-radius: 50px;
+    text-align: center;
 }
 
-#python img {
-    display: inline-block;
+#python > img {
     width: 100px;
-    vertical-align: middle;
-    padding: 10px;
+    padding: 20px 10px 10px 20px;
 }
 
-#python p {
-    display: inline-block;
-    width: 300px;
-    vertical-align: middle;
-    padding: 10px;
+#python > p {
+    margin: auto;
+    padding-right: 22px;
 }
 
-#html-css img {
-    width: 155px;
-    vertical-align: middle;
-    display: inline-block;
-    padding: 10px;
+#html-css {
+    display: flex;
+    background-color: var(--color5);
+    width: 800px;
+    margin: 10px auto;
+    border-radius: 50px;
+    text-align: center;
 }
 
-#html-css p {
-    display: inline-block;
-    width: 300px;
-    vertical-align: middle;
-    padding: 10px;
+#html-css > p {
+    margin: auto;
+    padding-left: 20px;
 }
 
-#js img {
+#html-css > img {
     width: 109px;
-    vertical-align: middle;
-    display: inline-block;
-    padding: 10px;
+    padding: 15px 20px 15px 10px;
 }
 
-#js p {
-    display: inline-block;
-    width: 300px;
-    vertical-align: middle;
-    padding: 10px;
+#js {
+    display: flex;
+    background-color: var(--color5);
+    width: 800px;
+    margin: auto;
+    border-radius: 50px;
+    text-align: center;
 }
 
-#node img {
+#js > img {
     width: 109px;
-    vertical-align: middle;
-    display: inline-block;
-    padding: 10px;
+    padding: 20px 10px 20px 25px;
 }
 
-#node p {
-    display: inline-block;
-    width: 300px;
-    vertical-align: middle;
-    padding: 10px;
+#js > p {
+    margin: auto;
+    padding-right: 22px;
 }
