--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
     font-family: var(--fontBody);
 }
 
@@ -38,7 +38,6 @@ header {
 
 nav {
     background-color: var(--color4);
-    position: fixed;
     text-align: center;
     width: 100%;
 }
@@ -347,7 +346,7 @@ h1 {
 #todo-list {
     display: grid;
     grid-template-columns: repeat(2 auto);
-    grid-template-rows: 40px 140px 35px 270px;
+    grid-template-rows: 40px 140px 35px 240px;
     width: 1000px;
     margin: auto;
 }
@@ -398,6 +397,25 @@ h1 {
 
 #todo-list > img.project-img:hover {
     transform: scale(1.2);
+}
+
+/* Scroll to Top Button */
+
+#scrollBtn {
+    position: fixed;
+    bottom: 70px;
+    right: 40px;
+    padding: 10px;
+    border-radius: 50%;
+    background-color: var(--color4);
+    cursor: pointer;
+    transition: .3s;
+    display: flex;
+    align-items: center;
+}
+
+#scrollBtn:hover {
+    background-color: var(--color5);
 }
 
 /* Footer */
