added a temporary function because my site is not hosted

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -308,6 +308,10 @@ h1 {
     background-color: var(--color4);
 }
 
+.node-btn {
+    cursor: pointer;
+}
+
 #node-login > img.project-img {
     width: 290px;
     grid-row: 1 / 3;
